# AI-PDF-Assistant

./: README.md  ask.py  data_loader.py  main.py  pyproject.toml  vector_db.py
.devcontainer/: devcontainer.json
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
